# HandSegmentationCV

./: CMakeListsTemplate.txt  EgoHandsTraining.ipynb  README.md
HandDetSeg/: CMakeLists(1).txt  README(1).md  hands_labels.names  segmentation_test_1.txt  segmentation_test_2(1).txt  segmentation_test_3(1).txt  segmentation_test_4(1).txt
HandDetSeg/code/: Detection.cpp  Segmentation.cpp  main.cpp
HandDetSeg/det/: 06.txt  09.txt  10.txt  11.txt  15.txt  20.txt  24.txt
HandDetSeg/header/: Detection.h  Segmentation.h
HandDetSeg/output/: det.txt  out.txt
HandDetSeg/test_results/: IoU.txt  pred_boxes_1.txt
HandDetection/: CMakeLists.txt  README.md  yolov5.cpp
HandDetection/code/: Detection.cpp  main.cpp
HandDetection/det/: 05.txt  13.txt  14.txt  19.txt  30.txt
HandDetection/header/: Detection.h
HandDetection/output/: out.txt
HandDetection/test_results/: pred_boxes.txt
HandSegmentation/: CMakeLists.txt
HandSegmentation/code/: Segmentation.cpp  main.cpp
HandSegmentation/det/: 02.txt  04.txt  07.txt  08.txt  16.txt  17.txt  26.txt  29.txt
HandSegmentation/det_label/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  23.txt  25.txt  27.txt
HandSegmentation/header/: Segmentation.h
Hand_segmentation/: CMakeLists.txt  Segmentation.cpp  main.cpp
Hand_segmentation/det/: 03.txt  22.txt  28.txt
handDetSeg/: CMakeLists.txt
handDetSeg/code/: Detection.cpp  Segmentation.cpp  main.cpp
handDetSeg/det/: 01.txt  08.txt  12.txt  18.txt
handDetSeg/test_results/: IoU_100_epochs.txt  IoU_aug.txt  IoU_model2.txt
